[package]
name = "tracing-fast-dev"
version = "0.0.1"
edition = "2021"
description = "A helper for tracing crate"
license = "MIT"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
